<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.vanniktech.vntnumberpickerpreference.VNTNumberPickerPreference
        android:defaultValue="@integer/def_work_minutes"
        android:key="@string/key_work_minutes"
        android:title="@string/title_work_minutes"
        app:vnt_maxValue="60"
        app:vnt_minValue="1"
        app:vnt_setWrapSelectorWheel="true" />

    <com.vanniktech.vntnumberpickerpreference.VNTNumberPickerPreference
        android:defaultValue="@integer/def_short_break_minutes"
        android:key="@string/key_short_break_minutes"
        android:title="@string/title_short_break_minutes"
        app:vnt_maxValue="30"
        app:vnt_minValue="1"
        app:vnt_setWrapSelectorWheel="true" />


    <com.vanniktech.vntnumberpickerpreference.VNTNumberPickerPreference
        android:defaultValue="@integer/def_long_break_minutes"
        android:key="@string/key_long_break_minutes"
        android:title="@string/title_long_break_minutes"
        app:vnt_maxValue="60"
        app:vnt_minValue="1"
        app:vnt_setWrapSelectorWheel="true" />

    <SwitchPreference
        android:defaultValue="@bool/def_use_vibration"
        android:key="@string/key_use_vibration"
        android:title="@string/title_use_vibration" />

    <PreferenceCategory android:title="@string/about">
        <Preference
            android:selectable="false"
            android:summary="@string/version_name"
            android:title="@string/version_title" />

        <Preference
            android:summary="@string/source_code_url"
            android:title="@string/source_code_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/source_code_url" />
        </Preference>

        <Preference android:title="@string/open_source_license">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="com.nagopy.android.pomo.LicenseActivity"
                android:targetPackage="com.nagopy.android.pomo" />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>
